Fix align #capra

--- a/css/style.css
+++ b/css/style.css
@@ -1591,3 +1591,7 @@ a:hover .caption {
 	margin-top: 2em;
 	text-align: center;
 }
+
+#capra {
+	text-align: center;
+}
